syntax = "proto3";

package productclient;

option go_package = "product";

// 产品创建
message CreateRequest {
  string Name = 1;
  string Desc = 2;
  int64 Stock = 3;
  int64 Amount = 4;
  int64 Status = 5;
}
message CreateResponse {
  int64 id = 1;
}
// 产品创建

// 产品修改
message UpdateRequest {
  int64 id = 1;
  string Name = 2;
  string Desc = 3;
  int64 Stock = 4;
  int64 Amount = 5;
  int64 Status = 6;
}
message UpdateResponse {
}
// 产品修改

// 产品删除
message RemoveRequest {
  int64 id = 1;
}
message RemoveResponse {
}
// 产品删除

// 产品详情
message DetailRequest {
  int64 id = 1;
}
message DetailResponse {
  int64 id = 1;
  string Name = 2;
  string Desc = 3;
  int64 Stock = 4;
  int64 Amount = 5;
  int64 Status = 6;
}
// 产品详情

// 减产品库存
message DecrStockRequest {
  int64 id = 1;
  int64 num = 2;
}
message DecrStockResponse {
}
// 减产品库存

service Product {
  rpc Create(CreateRequest) returns(CreateResponse);
  rpc Update(UpdateRequest) returns(UpdateResponse);
  rpc Remove(RemoveRequest) returns(RemoveResponse);
  rpc Detail(DetailRequest) returns(DetailResponse);
  rpc DecrStock(DecrStockRequest) returns(DecrStockResponse);
  rpc DecrStockRevert(DecrStockRequest) returns(DecrStockResponse);
}
